добавил еще один тип подставки

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
 		   <div class="text-block">
 				  <p><strong>ДЛЯ ЗАКАЗА:</strong> Просто пришлите картинку в Телеграмм, WhatsApp или на электронную почту.</p>
 				  <p>Доставка возможна транспортной компанией.</p>
-				  <p>Стоимость от 200р за подставку. Размер подставки 95*95*5 mm.</p>
+				  <p>Стоимость  200р за подставку размером:  95*95*5 mm.</p>
+				  <p>Стоимость  150р за подставку размером: 90*90*3 mm.</p>
 				  <p>Стоимость доставки оплачивается отдельно</p>
 			</div> 
 		  <img src="img/cat.png" alt="Кошечка" id="catImage">
